# taisho-stock-analysis

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
docker/: Dockerfile
src/: __init__.py
src/app/: config.py  db.py  main.py
src/app/routers/: health.py
src/db/: __init__.py  session.py
src/tests/: test_db_connection.py  test_sample.py
